tests/fixtures/invalid/std_async_missing_import.incn
"""Invalid fixture: std.async import missing"""

async def work() -> None:
    await sleep(0.1)
